--- a/notebooks/01-local-QARTOD-test.ipynb
+++ b/notebooks/01-local-QARTOD-test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d83470a1",
+   "id": "f9f95658",
    "metadata": {},
    "source": [
     "# Comparing local results of QARTOD tests to expected results \n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ecc1a42",
+   "id": "f12f0b76",
    "metadata": {},
    "source": [
     "## 1: load dependencies"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "931c7aef",
+   "id": "034f93a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7b10930",
+   "id": "7ca8706f",
    "metadata": {},
    "source": [
     "## 2: create data stream URL"
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1ee95a9",
+   "id": "4600703d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +53,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c93f082d",
+   "id": "fdcd8646",
    "metadata": {},
    "source": [
-    "## 3: collect test value tables"
+    "## 3: collect test QARTOD value tables"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1c09f89d",
+   "id": "9b119cdf",
    "metadata": {},
    "source": [
     "## 4: run QARTOD tests locally"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d1e35d3",
+   "id": "987de098",
    "metadata": {},
    "source": [
     "## 5: download expected results via M2M"
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7df7e4",
+   "id": "a0e41d3f",
    "metadata": {},
    "source": [
     "## 6: identify differences in results"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a820a5",
+   "id": "9d6e5d5e",
    "metadata": {},
    "source": [
     "## 7: export differing values to CSV with relevant metadata\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a9f9812",
+   "id": "87dd9eb5",
    "metadata": {},
    "outputs": [],
    "source": []
