Add sections to import modules used

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -5,16 +5,66 @@
    "id": "f9f95658",
    "metadata": {},
    "source": [
-    "# Comparing local results of QARTOD tests to expected results \n",
-    "(from ingestion?)"
+    "### Import modules used in this notebook"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f12f0b76",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48d4e9d7",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 1: load dependencies"
+    "# Import libraries\n",
+    "import os\n",
+    "import re\n",
+    "import gc\n",
+    "import io\n",
+    "import ast\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77b6887d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import OOINet library\n",
+    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
+    "from ooinet import M2M\n",
+    "from ooinet.Instrument.common import process_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95a50fdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import functions from ooi-data-explorations library\n",
+    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
+    "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
+    "from ooi_data_explorations.combine_data import combine_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91e07d51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dask tools and ProgressBar\n",
+    "import dask\n",
+    "from dask.diagnostics import ProgressBar"
    ]
   },
   {
@@ -24,6 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import IOOS module with QARTOD tests\n",
     "import ioos_qc"
    ]
   },
