--- a/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
+++ b/notebooks/03-Compare-local-test-with-OOINet-output.ipynb
@@ -1,9 +1,84 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f7e679a3",
+   "metadata": {},
+   "source": [
+    "### Import modules used in this notebook"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c1878b",
+   "id": "b3f54d96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import libraries\n",
+    "import os\n",
+    "import re\n",
+    "import gc\n",
+    "import io\n",
+    "import ast\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3656318d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import OOINet library\n",
+    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\OOINet\") # this is what was missing from the steps I followed to install ooinet and ooi-data-explorations as local dev repo\n",
+    "from ooinet import M2M\n",
+    "from ooinet.Instrument.common import process_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a762e843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import functions from ooi-data-explorations library\n",
+    "sys.path.append(\"c:\\\\Users\\\\cooleyky\\\\Documents\\\\GitHub\\\\ooi-data-explorations\\\\python\") # why did the initial install not include this?\n",
+    "from ooi_data_explorations.uncabled.process_dosta import dosta_datalogger\n",
+    "from ooi_data_explorations.combine_data import combine_datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdc97e28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dask tools and ProgressBar\n",
+    "import dask\n",
+    "from dask.diagnostics import ProgressBar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e6e2063",
+   "metadata": {},
+   "source": [
+    "### Comparing local results of QARTOD tests to expected results "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3f1d9c6",
    "metadata": {},
    "outputs": [],
    "source": []
